Fixed wide body content div on mobile

--- a/style.css
+++ b/style.css
@@ -140,6 +140,6 @@ a:hover, a:visited, a:link, a:active {
         transition: 1s;
     }
     .body-content {
-        width: 425px;
+        width: 325px;
     }
 }
